#93. Add docs about maven-based projects configuration.